--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,6 +44,13 @@ a {
     opacity: 0.9;
 }
 /* ========= Header ========= */
+.fix-header {
+    background: #e6f0ff;
+    padding-top: 26px;
+    position: sticky;
+    top: -26px;
+}
+
 .header {
     position: relative;
     background: #e6f0ff;
@@ -54,7 +61,8 @@ a {
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 38px;
+    /* padding-top: 38px; */
+    padding: 12px 0;
 }
 
 .navbar ul {
@@ -156,19 +164,22 @@ a {
 }
 
 .clients .images {
-    margin-top: 96px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 70px;
 }
 
 .clients .images a {
     display: flex;
     align-items: center;
     height: 90px;
-    padding: 0 42px;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+    padding: 0 40px;
     border-radius: 12px;
+}
+
+.clients .images a:hover {
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
 }
 
 /* ========= Guides ========= */
