--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,6 +61,7 @@ a {
     position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     background: #e6f0ff;
     height: calc(100vh - 90px);
 }
@@ -105,16 +106,11 @@ a {
     border-radius: 8px;
 }
 
-.hero {
-    /* padding-top: 130px; */
-    margin-top: 130px;
-}
-
-.hero .info {
+.hero-wrap .info {
     width: 51%;
 }
 
-.hero .sup-title {
+.hero-wrap .sup-title {
     color: #687691;
     font-size: 1.8rem;
     font-weight: 500;
@@ -122,7 +118,7 @@ a {
     letter-spacing: 0.01em;
 }
 
-.hero .title {
+.hero-wrap .title {
     margin-top: 8px;
     font-weight: 700;
     line-height: 1.19;
@@ -130,7 +126,7 @@ a {
     font-size: 6.2rem;
 }
 
-.hero .desc {
+.hero-wrap .desc {
     margin-top: 30px;
     color: #5a6473;
     font-size: 1.8rem;
