--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -170,7 +170,7 @@ a {
 
 .clients .images {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-top: 70px;
 }
